reorganize _assets.scss and fix margins

--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -116,8 +116,8 @@
                     <div class="section-tag project-tag">
                         <p class="subtitle-medium">Sparc Projects</p>
                     </div>
-                    <h5>To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h5>
-                    <a href="/projectlist">View All Projects <img src="images/icons/Icon Right.svg" /></a>
+                    <h5 class="subtitle-large">To put this belief into practice, we have self funded a few initial startups, which, once profitable will be able to continue to fund following startups through to their own profitability.</h5>
+                    <a class="link-large" href="/projectlist">View All Projects <img src="images/icons/Icon Right.svg" /></a>
                 </div>
                 <div class="right">
                     <div class="card-wrapper">
@@ -241,7 +241,7 @@
                     </div>
 
                     <div class="community-signup">
-                        <p>Join our community</p>
+                        <p class="label">Join our community</p>
                         <div class="community-join">
                             <input placeholder="Your Email"/>
                             <button class="btn-large">Join</button>
@@ -261,7 +261,7 @@
                     </div>
 
                     <div class="community-signup">
-                        <p>Join our movement</p>
+                        <p class="label">Join our movement</p>
                         <div class="community-join">
                             <button class="btn-large">Apply to become Sparc Align</button>
                         </div>
