--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -255,7 +255,7 @@
                     </div>
                     <div class="card-header">
                         <h6 class="title-2 semi-bold">Individuals</h6>
-                        <p class="subtitle-medium">At an individual level, we want to provide guidance, resources and anything else we can to help you find similar companies, fit into our projects or build your own.
+                        <p class="subtitle-medium">As a company, you have the ability to lead by example, and so we want to partner with companies to expand our “sparc coop” and proudly show our values are aligned.
 
                         </p>
                     </div>
